--- a/src/App.css
+++ b/src/App.css
@@ -19,7 +19,7 @@ html, body {
 
 
 .one {
-  width: 100%;
+  width: 200%;
   height: 100%;
 }
 
@@ -55,8 +55,37 @@ overflow: hidden;
   position: relative;
   align-items: center;
   flex-wrap: nowrap;
-
 }
 
+.video_container {
+  width: 100%;
+  height: 500px;
+  display:flex; 
+  justify-content: center;
+  align-items: center; 
+ }
 
+
+ .welcome-text {
+  width: 50%;
+  height: 15%;
+  position: absolute;
+  align-items: center; 
+  justify-content: center;
+  display: flex;
+  flex-direction: column;
+  align-content: center;
+ }
+
+
+
+
+
+ .about_us_container { 
+  width: 100%;
+  overflow: hidden;
+  height: 500px;
+  background-image: url("https://images.unsplash.com/photo-1503595787607-3bc1626adf4a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
+  background-size: cover;
+ }
 
