--- a/src/App.css
+++ b/src/App.css
@@ -79,8 +79,6 @@ overflow: hidden;
 
 
 
-
-
  .about_us_container { 
   width: 100%;
   overflow: hidden;
@@ -88,4 +86,45 @@ overflow: hidden;
   background-image: url("https://images.unsplash.com/photo-1503595787607-3bc1626adf4a?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
   background-size: cover;
  }
+ .menu-image-container { 
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 400px;
+  background-image: url("https://images.unsplash.com/photo-1543198432-a20fa3055570?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1950&q=80");
+  background-size: cover;
+  background-position: 1px, 1000px;
 
+ }
+
+ .noodles-image-container { 
+  display: flex;
+  flex-direction: row;
+  justify-content: center;
+  align-items: center;
+  width: 100%;
+  height: 450px;
+  background-image: url('/img/Noodles.png');
+  background-size: cover;
+  background-position: 1px, 1000px;
+
+
+
+ }
+
+ .main-menu-container { 
+  display: flex;
+  flex-direction: column;
+  justify-content: center;
+  align-items: center;
+  padding-top: 5%;
+  padding-bottom: 5%;
+ }
+
+
+ .item-container {
+   width: 75%; 
+   height: 100%;
+ }
