--- a/src/App.css
+++ b/src/App.css
@@ -140,7 +140,6 @@ overflow: hidden;
   background-size: cover;
   height: 100vh;
   justify-content: center;
- 
 
   }
 
@@ -155,3 +154,25 @@ overflow: hidden;
   background-color: lightgray; 
   opacity: 90%;;
  }
+   
+ .login-form{
+  width: 30%;
+  height: 50%;
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  background-color: lightgray; 
+  opacity: 90%;;
+ }
+  
+ .login-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  background-image: url("https://images.unsplash.com/photo-1496116218417-1a781b1c416c?ixlib=rb-1.2.1&ixid=eyJhcHBfaWQiOjEyMDd9&auto=format&fit=crop&w=1350&q=80");
+  background-size: cover;
+  height: 100vh;
+  justify-content: center;
+
+  }
