--- a/src/App.css
+++ b/src/App.css
@@ -198,3 +198,13 @@ overflow: hidden;
   justify-content: center;
 
   }
+
+
+ .chart-container {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  height: 100vh;
+  justify-content: center;
+
+  }
