--- a/src/App.css
+++ b/src/App.css
@@ -129,7 +129,7 @@ overflow: hidden;
    flex-direction: column;
    align-items: center;
    background-color: lightgray; 
-   opacity: 90%
+   /* opacity: 90% */
   }
   
   .checkout-main {
